--- a/app/src/main/res/layout/banner_item.xml
+++ b/app/src/main/res/layout/banner_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/banner_item_img"
@@ -11,4 +11,15 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_height="180dp"/>
-</LinearLayout>
+    <TextView
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:padding="3dp"
+        android:text="第三方"
+        android:textColor="#fff"
+        android:id="@+id/banner_item_tv"
+        android:background="#22333333"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</FrameLayout>
